# Aly

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  example.aly
Documentation/: AST-Concept.md  Ideas.md  TODO.md
Scripts/: Build.bat  Build.sh
src/: main.c
